--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="container">
       <div class="card">
         <div class="container-qrcode">
-            <img src="/img/image-qr-code.png" alt="">
+            <img src="img/image-qr-code.png" alt="">
         </div>
 
         <h2>Improve your front-end skills by building projects</h2>
